# Flashphoto-Mia

./: CMakeLists.txt  Makefile  README.md
docs/: Doxyfile
src/: design.md  flashphoto.md  mainpage.md  mia.md  style.md  tasks.md
src/flashphoto/: Makefile  flashphoto_app.cc  flashphoto_app.h  main.cc
src/imagetools/: CMakeLists.txt  Makefile  color_data.cc  color_data.h  filter.cc  filter.h  filter_channels.cc  filter_channels.h  filter_convolution.cc  filter_convolution.h  filter_convolution_blur.cc  filter_convolution_blur.h  filter_convolution_edge.cc  filter_convolution_edge.h  filter_convolution_motion_blur.cc  filter_convolution_motion_blur.h  filter_convolution_sharpen.cc  filter_convolution_sharpen.h  filter_quantize.cc  filter_quantize.h  filter_saturate.cc  filter_saturate.h  filter_threshold.cc  filter_threshold.h  float_matrix.cc  float_matrix.h  image_editor.cc  image_editor.h  image_tools_math.h  mask_factory.cc  mask_factory.h  pixel_buffer.cc  pixel_buffer.h  tool.cc  tool.h  tool_blur.cc  tool_blur.h  tool_calligraphy_pen.cc  tool_calligraphy_pen.h  tool_chalk.cc  (+11 more)
src/mia/: Makefile  command_line_processor.cc  command_line_processor.h  image_editor_commands.cc  image_editor_commands.h  main.cc  mia_app.cc  mia_app.h
src/tests/: Makefile
web/doxygen-html/: annotated.html  classes.html  classimage__tools_1_1AddToStrokeCommand-members.html  classimage__tools_1_1AddToStrokeCommand.html  classimage__tools_1_1AddToStrokeCommand__coll__graph.map  classimage__tools_1_1AddToStrokeCommand__coll__graph.md5  classimage__tools_1_1BlurFilterCommand.html  (+278 more)
(+57 files in other folders)
